route-frontend.route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend.route
  namespace: app-project
  uid: 624c6846-573b-4fc0-9d4d-cc85c7ddfcab
  resourceVersion: '5325713'
  creationTimestamp: '2025-06-22T04:29:44Z'
  annotations:
    openshift.io/host.generated: 'true'
  managedFields:
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-06-22T04:55:30Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:ingress': {}
      subresource: status
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      time: '2025-06-22T05:27:06Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:certificate': {}
            'f:insecureEdgeTerminationPolicy': {}
            'f:key': {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEpDCCA4ygAwIBAgIUbBJ+ur6pYahDechL6s4bIprBmj4wDQYJKoZIhvcNAQEL
[...]
      X0yiVfg7YHtLPVhPBy4V+M0oH1z+CfquWlxrEPw1ii+NtgJwTUzvDA==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDxsAuUU64C8qLS
[...]
      a531pHBqyi4vMOa4BZFInxc=
      -----END PRIVATE KEY-----
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
status:
  ingress:
    - host: frontend.sirasith.net
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
          lastTransitionTime: '2025-06-22T04:55:30Z'
      wildcardPolicy: None
      routerCanonicalHostname: router-default.apps.itz-405mxu.infra01-lb.tok04.techzone.ibm.com
